--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,1 +1,6 @@
-{}
+{
+  "readableLineLength": true,
+  "strictLineBreaks": false,
+  "trashOption": "local",
+  "attachmentFolderPath": "Attachments"
+}
